@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-08-06T08:21:52Z",
+  "timestamp" : "2022-08-06T16:24:04Z",
   "count_outdated" : 2311,
   "uniques_outdated" : 522,
   "count" : 2345,
-  "uniques" : 542,
+  "uniques" : 541,
   "clones" : [
     {
       "timestamp": "2022-07-23T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 2, 5 ],
-      "uniques": 3,
+      "uniques": 2,
       "uniques_minmax": [ 2, 4 ]
     },
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-08-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
