@@ -1,11 +1,11 @@
 {
   "count": 34,
-  "uniques": 6,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-07-23T00:00:00Z",
-      "count": 3,
-      "uniques": 3
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2022-07-24T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-08-06T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
